--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-/PersonalIncomeStatement/bin/Debug/*.*
-/PersonalIncomeStatement/obj/*.*
+/PersonalIncomeStatement/bin
+/PersonalIncomeStatement/obj
