--- a/PersonalIncomeStatement/PersonalIncomeStatement.csproj
+++ b/PersonalIncomeStatement/PersonalIncomeStatement.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
+    <Folder Include="Utilities\" />
   </ItemGroup>
 
 </Project>
